--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@ body {
     background-color: #f2f2f2;
 }
 .container {
-    position: absolute;
+  position: absolute;
   width: 600px;
   height: 200px;
   z-index: 15;
@@ -18,6 +18,31 @@ body {
 .vers {
     bottom: 0;
 }
+/* BOTONES */
+.boton {
+	box-shadow:inset 0px 1px 0px 0px #dcecfb;
+	background-color:#bddbfa;
+	border-radius:6px;
+	border:1px solid #84bbf3;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:20px;
+	font-weight:bold;
+	padding:20px 29px;
+	text-decoration:none;
+    text-shadow:0px 1px 0px #528ecc;
+    margin: 0.5vw;
+}
+.boton:hover {
+	background-color:#80b5ea;
+}
+.boton:active {
+	position:relative;
+	top:1px;
+}
+/*****/
 /* EDICIONES BOOTSTRAP */
 .btn-lg {
     width: 10vw;
@@ -34,6 +59,10 @@ body {
 }
 .btn_fc {
     width: 7vw;
+}
+.btn-group { 
+        width: 45% !important;
+        margin: 0 auto !important;
 }
 /* MODAL DERECHA */ 
 /*******************************
